@@ -124,6 +124,7 @@ typedef enum libspectrum_id_t {
 
   /* Below here, present only in 0.2.1 and later */
 
+  LIBSPECTRUM_ID_COMPRESSED_BZ2,	/* bzip2 compressed file */
   LIBSPECTRUM_ID_COMPRESSED_GZ,		/* gzip compressed file */
 
 } libspectrum_id_t;
